--- a/src/main/resources/assets/semirealisticelectricity/lang/en_us.json
+++ b/src/main/resources/assets/semirealisticelectricity/lang/en_us.json
@@ -30,6 +30,8 @@
   "block.semirealisticelectricity.rubber_log_tap": "Rubber Log Tap",
   "block.semirealisticelectricity.stripped_rubber_log": "Stripped Rubber Log",
   "block.semirealisticelectricity.rubber_leaves": "Rubber Leaves",
-  "block.semirealisticelectricity.rubber_sapling": "Rubber Sapling"
+  "block.semirealisticelectricity.rubber_sapling": "Rubber Sapling",
+
+  "block.semirealisticelectricity.iron_furnace": "Iron Furnace"
 
 }
