--- a/src/main/resources/assets/semirealisticelectricity/lang/en_us.json
+++ b/src/main/resources/assets/semirealisticelectricity/lang/en_us.json
@@ -32,6 +32,7 @@
   "block.semirealisticelectricity.rubber_leaves": "Rubber Leaves",
   "block.semirealisticelectricity.rubber_sapling": "Rubber Sapling",
 
-  "block.semirealisticelectricity.iron_furnace": "Iron Furnace"
+  "block.semirealisticelectricity.iron_furnace": "Iron Furnace",
+  "block.semirealisticelectricity.crusher": "Crusher"
 
 }
